[package]
name = "stick_solo"
version = "0.0.0"
authors = ["Yashasvi Sriram Patkuri <yash.3997@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.8.1"
rand = "0.7.3"
rand_distr = "0.3.0"
anyhow = "1.0.34"
chrono = "0.4.15"
ndarray = { version = "0.13.1", features = ["serde"] }
ndarray-rand = "0.11.0"
rayon = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
image = "0.23.12"
